# ausgabenzettel

./: .gitignore  .harper-dictionary.txt  Containerfile  Makefile  README.md  body.html  content.html  gen-client-certs.bash  head_begin.template  index.html  style.css
.github/workflows/: build.yaml
backend/: Cargo.toml  README.md
backend/initial/: README.md  content.template  head.template
backend/src/: certs.rs  config.rs  git.rs  main.rs  parser.rs
backend/testdata/: initial.html
cli/: Cargo.toml  README.md
cli/example/: .gitignore  category.json
cli/src/: main.rs
cli/src/rules/: dkb.rs  gls.rs  mod.rs
frontend/: Makefile  body.html  body_begin.template  head_end.template  index.html  style.css
frontend/js/: date-time.js  donut.js  root.js
js/: donut.js  root.js
